# .config

./: .clang-format  .dprint.json  .editorconfig  .gitconfig  .gitconfig_p  .gitignore  .lldbinit  .luarc.json  .prettierrc  .rubocop.yml  .rustfmt.toml  .stylua.toml  .swiftformat  .vimrc  .zlogin  .zlogout  .zprofile  .zshenv  .zshenv.zsh  .zshrc  .zshrc.archv  Brewfile  Brewfile.lock.json  Caskfile  README.md  alacritty.toml  alacritty.yml  auto_commit.sh  com.googlecode.iterm2.plist  init.sh  init.sh.bak  iterm2.json  mimeapps.list  safari.css  starship.toml  stylua.toml  userChrome.css
.config/: starship.toml
.fig/: fig.history  history  settings.json
.hammerspoon/: init.lua  shift_double_press.lua
.ssh/: config
.warp/: keybindings.yaml
aerospace/: aerospace.toml
alacritty/: alacritty.toml  alacritty.yml  theme.yml
anyrun/: applications.ron  config.ron  dictionary.ron  niri_focus.ron  nix_run.ron  shell.ron  style.css  symbols.ron  websearch.ron
brewfile/: Brewfile
chrome/: userChrome.css
clipcat/: clipcat-menu.toml  clipcatctl.toml  clipcatd.toml
coc/: memos.json
codex/: AGENTS.md  config.toml
configstore/: zenn-cli.json
environment.d/: 10-home-manager.conf
eza/: theme.yml
fish/: config.fish  fish_variables
gemini/: settings.json
gh/: hosts.yml
sbar-rs/: Cargo.toml  README.md  install.sh  setup.sh  test.rs  uninstall.sh
sbar-rs/src/: main.rs  sketchybar.rs
sbar-rs/src/config/: mod.rs
sbar-rs/src/helpers/: yabai.rs
sbar-rs/src/items/: battery.rs  clock.rs  current_app.rs  keyboard.rs  mod.rs  space.rs  window.rs
(+295 files in other folders)
